<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>com.group2</groupId>
		<artifactId>g2</artifactId>
		<version>1.0.0-SNAPSHOT</version>
	</parent>
	<artifactId>g2-model</artifactId>
	<name>${project.artifactId}</name>
	<description>${project.artifactId}</description>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>11</java.version>

	</properties>

	<dependencies>
		<dependency>
			<groupId>com.group2</groupId>
			<artifactId>g2-api</artifactId>
		</dependency>

		<dependency>
			<groupId>org.hsqldb</groupId>
			<artifactId>hsqldb</artifactId>
		</dependency>

		<dependency>
			<groupId>com.ontimize.jee</groupId>
			<artifactId>ontimize-jee-server-jdbc</artifactId>
		</dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
		</dependency>
		<dependency>
			<groupId>com.rometools</groupId>
			<artifactId>rome</artifactId>
		</dependency>

	</dependencies>

	<build>
		<finalName>${project.artifactId}</finalName>

	</build>
	<profiles>
		<profile>
			<id>run_database</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-antrun-plugin</artifactId>
						<version>3.0.0</version>
						<executions>
							<execution>
								<id>configure_database</id>
								<phase>validate</phase>
								<goals>
									<goal>run</goal>
								</goals>
								<configuration>
									<target>
										<available file="${hsqldatabase.path}/templateDB.script" property="database.exist" />
										<echo message="${hsqldatabase.path}/templateDB.script" />
										<copy tofile="${hsqldatabase.path}/templateDB.script" file="${hsqldatabase.path}/templateDB.txt" />
									</target>
								</configuration>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>exec-maven-plugin</artifactId>
						<version>1.2.1</version>
						<configuration>
							<mainClass>org.hsqldb.Server</mainClass>
							<arguments>
								<argument>-port</argument>
								<argument>9013</argument>
								<argument>-database.0</argument>
								<argument>${hsqldatabase.path}/templateDB</argument>
								<argument>-dbname.0</argument>
								<argument>templateDB</argument>
							</arguments>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>